# opcode

./: .gitignore  CLI_REFERENCE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  HTTP_API_GUIDE.md  README.md  README_API.md  config.example.yaml  package.json  run.sh  websocket-test.html
api-server/: README.md
api-server/src/handlers/: agents.rs  claude.rs
api-server/src/models/: agent.rs
api-server/src/services/: claude.rs  database.rs  mcp.rs  mod.rs
docs/: API_DESIGN.md  TESTING_README.md  WEBSOCKET_API.md  WEBSOCKET_TESTING.md
scripts/: install-cli.sh
src/: config.rs  error.rs  main.rs  websocket.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: compat.rs  error.rs  middleware.rs  mod.rs  response.rs  routes.rs  server.rs  state.rs
src-tauri/src/api/handlers/: agents.rs  health.rs  mod.rs  projects.rs  sessions.rs
src/handlers/: agents.rs  claude.rs  mcp.rs  mod.rs  storage.rs
src/models/: agent.rs  claude.rs  mcp.rs  mod.rs
src/services/: claude.rs  database.rs  mcp.rs
tests/: README.md  api_tests.py  run_tests.sh  websocket-chat.html  websocket-test.html  websocket_tests.py
