[package]
name = "opcode-api"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for OpCode Claude Code toolkit"

[[bin]]
name = "opcode-api"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
anyhow = "1"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"

# Authentication and security
jsonwebtoken = "9"
bcrypt = "0.15"

# Configuration
config = "0.14"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# File system
walkdir = "2"
tempfile = "3"

# API documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Process management
which = "7"
base64 = "0.22"
regex = "1"
glob = "0.3"
futures = "0.3"
async-trait = "0.1"
serde_yaml = "0.9"

[dev-dependencies]
tower-test = "0.4"